// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/WMarker Should be render correctly 1`] = `
<g value="[object Object]">
  <!---->
  <!---->
  <!---->
  <!---->
</g>
`;

exports[`Components/WMarker Should be render correctly with x type 1`] = `
<g value="[object Object]" type="x">
  <!---->
  <!---->
  <!---->
  <!---->
</g>
`;
